2010-09-10  Sam Weinig  <sam@webkit.org>

        Fix Qt build.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):

2010-09-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Remove unnecessary constraint in WebCore of choosing either text zoom or full page zoom.
        Precursor to <rdar://problem/7660657>
        https://bugs.webkit.org/show_bug.cgi?id=45522

        * Api/qwebframe.cpp:
        (QWebFrame::setTextSizeMultiplier):
        (QWebFrame::textSizeMultiplier):
        (QWebFrame::setZoomFactor):
        (QWebFrame::zoomFactor):
        * Api/qwebframe_p.h:
        (QWebFramePrivate::QWebFramePrivate):
        Move tracking of text only zoom here from WebCore.

2010-09-10  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Support click event for notifications
        https://bugs.webkit.org/show_bug.cgi?id=44836

        Propagate click events to JavaScript from either the
        platform plugn or from QSystemTrayIcon.
        Also added the method NotificationWrapper::openerPageUrl so that
        if the platform plugin can reopen the page that created the
        notification directly, when the user clicks the notification.

        Added DumpRenderTreeSupportQt::simulateDesktopNotificationClick
        for testing purpose.

        * Api/qwebkitplatformplugin.h:
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::simulateDesktopNotificationClick):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:
        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        (WebCore::NotificationWrapper::openerPageUrl):
        (WebCore::NotificationWrapper::notificationClicked):
        (WebCore::NotificationPresenterClientQt::displayNotification):
        (WebCore::NotificationPresenterClientQt::notificationClicked):
        * WebCoreSupport/NotificationPresenterClientQt.h:
        * examples/platformplugin/WebNotificationPresenter.cpp: